just naming changes and stuff

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Datacenter Location Analytics | Global Site Selection Dashboard</title>
+    <title>AI Datacenter Location Dashboard | Global Site Selection Dashboard</title>
     <meta name="description" content="Interactive dashboard analyzing optimal AI datacenter locations worldwide using CIA World Factbook data. Evaluate renewable energy, costs, infrastructure, and climate factors for strategic site selection." />
     <meta name="author" content="AI Datacenter Analytics" />
     <meta name="keywords" content="AI datacenter, location analytics, renewable energy, infrastructure analysis, global data visualization, site selection" />
 
-    <meta property="og:title" content="AI Datacenter Location Analytics Dashboard" />
+    <meta property="og:title" content="AI Datacenter Location Dashboard Dashboard" />
     <meta property="og:description" content="Discover the best locations for AI datacenters with our interactive global analytics platform" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
